--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+  <head>
+    <title>greg's website</title>
+  </head>
+  <body>
+    <h1>greg's website</h1>
+
+    <p><a href="https://www.instagram.com/greg_or_art/">instagram</a></p>
+    <p><a href="https://neocities.org/dashboard">dashboard</a></p>
+  </body>
 </html>
