--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>greg's website</title>
+    <link href="/style.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
     <h1>greg's website</h1>
